--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
 .App {
   text-align: center;
+  display: grid;
+  grid-template-areas: 
+  "options graph";
+  width: 100%;
+  height: 90vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.select-options{
+  grid-area: options;
+  margin-left: 30px;
+  margin-top: 30px;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bar-graph{
+  grid-area: graph;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.select-options #rates-label{
+  display:block;
+  text-align: left;
+  margin-left: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.select-options #rates{
+  display: block;
+  margin-left: 20px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.select-options #miles-label{
+  display: block;
+  text-align: left;
+  margin-left: 20px;
+}
+
+.select-options #miles{
+  display: block;
+  text-align: left;
+  margin-left: 20px;
+}
+
+.select-options #miles-range{
+  display: block;
+  text-align: left;
+  margin-left: 50px;
+}
+
+.select-options #hours-label{
+  display: block;
+  text-align: left;
+  margin-left: 20px;
+}
+
+.select-options #hours{
+  display: block;
+  text-align: left;
+  margin-left: 20px;
 }
