--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
 
-.App {
-  /* text-align: center; */
-  
+.App { 
   grid-template-areas: "options graph";
   width: 100%;
   height: 100vh;
@@ -15,14 +13,13 @@
 
 .select-options {
   grid-area: options;
-  margin: auto;
-  margin-top: 30px;
   padding-top: 30px;
   width: 250px;
   height: 550px;
   border: 1px solid rgb(211, 211, 211) ;
   background: white;
   border-radius: 8px;
+  margin: 60px 30px 0 60px;
 }
 
 .select-options #rates-label {
@@ -104,8 +101,8 @@
 .select-options input[type="range"]#miles:focus::-webkit-slider-runnable-track:hover {
   cursor: pointer;
 }
-
 /* styles slider ends */
+
 
 .select-options #miles-range {
   display: block;
@@ -142,12 +139,28 @@
   background: white;
   border: 1px solid rgb(211, 211, 211);
   border-radius: 8px;
-  height: 520px;
-  padding: 30px;
-  margin-right: 50px;
-  margin-top: 30px;
+  height: 580px;
+  margin: 60px 60px 0 0px;
 }
 
-.bar-graph h1.bar-graph-title {
-  margin-left: 20px;
+#stacked-graph{
+  padding:20px;
+}
+
+.bar-graph #switch-rates {
+  background: rgb(201, 199, 199);
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  padding: 10px 20px;
+}
+
+.bar-graph #switch-rates h1.bar-graph-title {
+ margin-top: 0;
+ padding-top: 5px;
+ font-size: 20px;
+}
+
+.bar-graph #switch-rates p{
+  line-height: 5px;
+  font-size: 14px;
 }
