--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
 
-
-.App { 
+.App {
   grid-template-areas: "options graph";
   width: 100%;
   height: 100vh;
@@ -19,7 +18,7 @@
   padding-top: 30px;
   width: 250px;
   height: 550px;
-  border: 1px solid rgb(211, 211, 211) ;
+  border: 1px solid rgb(211, 211, 211);
   background: white;
   border-radius: 8px;
   margin: 60px 30px 0 60px;
@@ -66,7 +65,6 @@
   width: 210px;
 }
 
-
 /* styles slider begins*/
 .select-options input[type="range"]#miles {
   -webkit-appearance: none;
@@ -101,11 +99,11 @@
 .select-options input[type="range"]#miles:focus::-webkit-slider-runnable-track {
   background: #ddd;
 }
-.select-options input[type="range"]#miles:focus::-webkit-slider-runnable-track:hover {
+.select-options
+  input[type="range"]#miles:focus::-webkit-slider-runnable-track:hover {
   cursor: pointer;
 }
 /* styles slider ends */
-
 
 .select-options #miles-range {
   display: block;
@@ -134,7 +132,7 @@
 }
 
 .select-options #hours {
- cursor: pointer;
+  cursor: pointer;
 }
 
 .bar-graph {
@@ -146,8 +144,8 @@
   margin: 60px 60px 0 0px;
 }
 
-#stacked-graph{
-  padding:20px;
+#stacked-graph {
+  padding: 20px;
 }
 
 .bar-graph #switch-rates {
@@ -158,25 +156,25 @@
 }
 
 .bar-graph #switch-rates h1.bar-graph-title {
- margin-top: 0;
- padding-top: 5px;
- font-size: 20px;
+  margin-top: 0;
+  padding-top: 5px;
+  font-size: 20px;
 }
 
-.bar-graph #switch-rates p{
+.bar-graph #switch-rates p {
   line-height: 5px;
   font-size: 14px;
 }
 
-.bolder{
+.bolder {
   font-weight: bolder;
 }
 
-.green{
-  color:green;
+.green {
+  color: green;
   font-weight: bolder;
 }
-.custom-shape{
+.custom-shape {
   position: absolute;
   bottom: 0px;
   width: 100%;
